[build-system]
requires = ["setuptools", 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[project]
name = "terraform-init"
version = "0.1.0"
description = "LocalStack Extension: terraform init"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.8"
license = {text = "UNLICENSED"}
authors = [
    { name = "Alessandro mancini", email = "dott.alessandro.mancini@gmail.com" }
]
keywords = ["localstack", "localstack-extension", "extension"]
classifiers = []
dependencies = [
]

[project.urls]
Homepage = "https://github.com/mancioshell/terraform-init"

[project.optional-dependencies]
dev = [
    "localstack>=0.0.0.dev"
]

[project.entry-points."localstack.extensions"]
terraform_init = "terraform_init.extension:TerraformInit"
